compiler/testData/diagnostics/tests/samConversions/samConversionToGenericWrongNullability.diag.txt
/edge-cases.kt:168:9: error: type mismatch: inferred type is Unit but String! was expected
        run {
        ^^^^^
/edge-cases.kt:174:9: error: type mismatch: inferred type is Unit but String! was expected
        run {
        ^^^^^
/edge-cases.kt:175:24: error: type mismatch: inferred type is String? but Unit was expected
            return@run returnNullableString()
                       ^^^^^^^^^^^^^^^^^^^^^^
/edge-cases.kt:180:9: error: type mismatch: inferred type is Unit but String! was expected
        run run@ {
        ^^^^^^^^^^
/edge-cases.kt:181:24: error: type mismatch: inferred type is String? but Unit was expected
            return@run returnNullableString()
                       ^^^^^^^^^^^^^^^^^^^^^^
/edge-cases.kt:186:9: error: type mismatch: inferred type is Unit but String! was expected
        run {
        ^^^^^
/test.kt:48:9: error: type mismatch: inferred type is String? but String was expected
        TestValueProvider.getNullableString()
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/test.kt:88:9: error: type mismatch: inferred type is String? but String was expected
        returnNullableString()
        ^^^^^^^^^^^^^^^^^^^^^^
/test.kt:93:30: error: type mismatch: inferred type is String? but String was expected
            if (true) return returnNullableString()
                             ^^^^^^^^^^^^^^^^^^^^^^
/test.kt:99:9: error: type mismatch: inferred type is () -> String but String was expected
        fun(): String {
        ^^^^^^^^^^^^^^^
/test.kt:99:9: error: type mismatch: inferred type is () -> String but String! was expected
        fun(): String {
        ^^^^^^^^^^^^^^^
/test.kt:100:30: error: type mismatch: inferred type is String? but String was expected
            if (true) return returnNullableString()
                             ^^^^^^^^^^^^^^^^^^^^^^
/test.kt:106:9: error: type mismatch: inferred type is () -> String? but () -> String was expected
        fun(): String? {
        ^^^^^^^^^^^^^^^^
/test.kt:113:9: error: type mismatch: inferred type is () -> String? but String was expected
        fun(): String? {
        ^^^^^^^^^^^^^^^^
/test.kt:113:9: error: type mismatch: inferred type is () -> String? but String! was expected
        fun(): String? {
        ^^^^^^^^^^^^^^^^
/test.kt:125:29: error: return type of 'get' is not a subtype of the return type of the overridden member 'public abstract fun get(): String defined in java.util.function.Supplier'
        override fun get(): String? = returnNullableString()
                            ^^^^^^^
/test.kt:129:22: error: return type of 'get' is not a subtype of the return type of the overridden member 'public abstract fun get(): String defined in java.util.function.Supplier'
        override fun get() = returnNullableString()
                     ^^^
